--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,23 @@ body {
   color: #777;
   line-height: 34px;
   background: url("../images/background.jpg");
+
+}
+
+h1{
+	font-size: 80px;
+	font-weight: bold;
+}
+
 }
 #heading {
 	text-align: center;
 	padding-bottom: 15px;
+	letter-spacing: .2em;
+
 }
 #main {
-	background-color: black;
+	background-color: #4d4d4d;
 	color: white;
 	font-size: 10px;
 }
@@ -18,15 +28,43 @@ body {
 	background-color: grey;
 }
 #start {
-	background-color: black;
+	background-color: #4d4d4d;
 	width: 500px;
 	height: 500px;
+	text-align: center;
 
 }
 
 #end{
-	background-color: black;
+	background-color: #4d4d4d;
 	width: 500px;
 	height: 500px;
 	
+	        font-size: 80px;
+ font-family: Georgia, 'Times New Roman', serif;
+ color: white;
+ text-align: center;
+        font-weight: 100; 
+ 
+ font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
+ font-weight: normal;
+ 
+ letter-spacing: .2em;
+ line-height: 1.1em;
+ margin:0px;
+ text-align: center;
+ text-transform: uppercase;
+
+
+	
 }
+#startbtn {
+	background-color: black;
+	width: 250px;
+	height: 100px;
+	font-size: 50px;
+	color: white;
+    text-shadow: 2px 2px 4px #000000;
+    font-weight: 25px;
+    letter-spacing: 10px;
+	}
